@@ -287,9 +287,15 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "GCCollectorStartupHookProxy
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "StartupHookDemo", "Demos\AllOverIt\Plugin\StartupHook\StartupHookDemo\StartupHookDemo.csproj", "{48B90FD6-B2AF-45E8-BB0F-1BB287A832C8}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AllOverIt.Tests.Helpers", "Tests\AllOverIt.Tests.Helpers\AllOverIt.Tests.Helpers.csproj", "{54C4D529-B2FF-4780-9847-A3E36F7BAC7F}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Tests.Helpers", "Tests\AllOverIt.Tests.Helpers\AllOverIt.Tests.Helpers.csproj", "{54C4D529-B2FF-4780-9847-A3E36F7BAC7F}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AllOverIt.Serialization.Abstractions.Tests", "Tests\AllOverIt.Serialization.Abstractions.Tests\AllOverIt.Serialization.Abstractions.Tests.csproj", "{2512C648-7D41-4346-B828-A96DBA9C721D}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Serialization.Abstractions.Tests", "Tests\AllOverIt.Serialization.Abstractions.Tests\AllOverIt.Serialization.Abstractions.Tests.csproj", "{2512C648-7D41-4346-B828-A96DBA9C721D}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Validation.Options", "Source\AllOverIt.Validation.Options\AllOverIt.Validation.Options.csproj", "{33BB73A8-FE0A-42DC-9123-8DFF48D780FE}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "AllOverIt.Validation.Options", "AllOverIt.Validation.Options", "{BD052D45-0AB7-4D70-A081-09E8F2610050}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "OptionsValidationDemo", "Demos\AllOverIt.Validation.Options\OptionsValidationDemo\OptionsValidationDemo.csproj", "{6B6883A1-3980-4E46-9CFF-7E793AFA8F38}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -693,6 +699,14 @@ Global
 		{2512C648-7D41-4346-B828-A96DBA9C721D}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{2512C648-7D41-4346-B828-A96DBA9C721D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{2512C648-7D41-4346-B828-A96DBA9C721D}.Release|Any CPU.Build.0 = Release|Any CPU
+		{33BB73A8-FE0A-42DC-9123-8DFF48D780FE}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{33BB73A8-FE0A-42DC-9123-8DFF48D780FE}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{33BB73A8-FE0A-42DC-9123-8DFF48D780FE}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{33BB73A8-FE0A-42DC-9123-8DFF48D780FE}.Release|Any CPU.Build.0 = Release|Any CPU
+		{6B6883A1-3980-4E46-9CFF-7E793AFA8F38}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{6B6883A1-3980-4E46-9CFF-7E793AFA8F38}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{6B6883A1-3980-4E46-9CFF-7E793AFA8F38}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{6B6883A1-3980-4E46-9CFF-7E793AFA8F38}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -830,6 +844,9 @@ Global
 		{48B90FD6-B2AF-45E8-BB0F-1BB287A832C8} = {9E8F785B-3896-40C0-8B66-4F29BA33906B}
 		{54C4D529-B2FF-4780-9847-A3E36F7BAC7F} = {0C08FAE6-4CD9-4C7B-A849-EB0DB9BD1451}
 		{2512C648-7D41-4346-B828-A96DBA9C721D} = {0C08FAE6-4CD9-4C7B-A849-EB0DB9BD1451}
+		{33BB73A8-FE0A-42DC-9123-8DFF48D780FE} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
+		{BD052D45-0AB7-4D70-A081-09E8F2610050} = {D9F6B8A1-4B01-4708-8851-741FC19F2440}
+		{6B6883A1-3980-4E46-9CFF-7E793AFA8F38} = {BD052D45-0AB7-4D70-A081-09E8F2610050}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {19DD11B3-596E-4862-B5C4-1FFFFB173106}
