@@ -1,92 +1,92 @@
 =====================================================================================================================================================================
 
-  [1]  AllOverIt                                
+  [1]  AllOverIt
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [16]
 
 
-  [2]  AllOverIt.Validation                     
+  [2]  AllOverIt.Validation
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [3]  AllOverIt.Aws.Cdk.AppSync                
+  [3]  AllOverIt.Aws.Cdk.AppSync
         - Targets                                - netcoreapp3.1
         - AllOverIt dependencies:                - [1], [15], [16]
 
 
-  [4]  AllOverIt.Evaluator                      
+  [4]  AllOverIt.Evaluator
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [5]  AllOverIt.GenericHost                    
+  [5]  AllOverIt.GenericHost
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [6]  AllOverIt.Fixture                        
+  [6]  AllOverIt.Fixture
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - None
 
 
-  [7]  AllOverIt.Fixture.FakeItEasy             
+  [7]  AllOverIt.Fixture.FakeItEasy
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [6]
 
 
-  [8]  AllOverIt.Serialization.Abstractions     
+  [8]  AllOverIt.Serialization.Abstractions
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - None
 
 
-  [9]  AllOverIt.Serialization.NewtonsoftJson   
+  [9]  AllOverIt.Serialization.NewtonsoftJson
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [8], [16]
 
 
 
-  [10] AllOverIt.Serialization.SystemTextJson   
+  [10] AllOverIt.Serialization.SystemTextJson
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [8], [16]
 
 
-  [11] AllOverIt.Aws.AppSync.Client             
+  [11] AllOverIt.Aws.AppSync.Client
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [8], [16]
 
 
-  [12] AllOverIt.AspNetCore                     
+  [12] AllOverIt.AspNetCore
         - Targets                                - netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [13] AllOverIt.EntityFrameworkCore            
+  [13] AllOverIt.EntityFrameworkCore
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [14] AllOverIt.Csv                            
+  [14] AllOverIt.Csv
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [15] AllOverIt.Reactive                       
+  [15] AllOverIt.Reactive
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
 
 
-  [16] AllOverIt.Assertion                      
+  [16] AllOverIt.Assertion
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - None
 
 
-  [17] AllOverIt.DependencyInjection     
+  [17] AllOverIt.DependencyInjection
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [16]
 
 
-  [18]  AllOverIt.Serialization     
+  [18]  AllOverIt.Serialization
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [8]
 
@@ -109,5 +109,10 @@
   [22] AllOverIt.Filtering
         - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
         - AllOverIt dependencies:                - [1], [16]
+
+
+  [23] AllOverIt.Validation.Options
+        - Targets                                - netstandard2.1;netcoreapp3.1;net5.0;net6.0;net7.0
+        - AllOverIt dependencies:                - [1], [2]
 
 =====================================================================================================================================================================
