@@ -1,0 +1,6 @@
+{
+    "options": {
+        "minLevel": -1,
+        "appName":  ""
+    }
+}
