@@ -1,0 +1,44 @@
+﻿using AllOverIt.Assertion;
+using AllOverIt.Extensions;
+using FluentValidation;
+using Microsoft.Extensions.Options;
+using System.Linq;
+
+namespace AllOverIt.Validation.Extensions
+{
+    internal sealed class FluentValidationValidateOptions<TOptions> : IValidateOptions<TOptions> where TOptions : class
+    {
+        private readonly IValidator<TOptions> _validator;
+        public string Name { get; }
+
+        public FluentValidationValidateOptions(string name, IValidator<TOptions> validator)
+        {
+            _validator = validator.WhenNotNull(nameof(validator));
+
+            Name = name;    // Can be null / empty
+        }
+
+        public ValidateOptionsResult Validate(string name, TOptions options)
+        {
+            _ = options.WhenNotNull(nameof(options));
+
+            // A null name is used to configure all named options
+            if (Name is not null && Name != name)
+            {
+                // Ignored if not validating this instance
+                return ValidateOptionsResult.Skip;
+            }
+
+            var validationResult = _validator.Validate(options);
+
+            if (validationResult.IsValid)
+            {
+                return ValidateOptionsResult.Success;
+            }
+
+            var errors = validationResult.Errors.Select(failure => failure.ErrorMessage);
+
+            return ValidateOptionsResult.Fail(errors);
+        }
+    }
+}
